dev/sampledata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledata
  namespace: yas-dev
  labels:
    app: sampledata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampledata
  template:
    metadata:
      labels:
        app: sampledata
    spec:
      containers:
      - name: sampledata
        image: ghcr.io/nashtech-garage/yas-sampledata:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
