dev/sampledata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampledata
  namespace: yas-dev
  labels:
    app: sampledata
spec:
  type: ClusterIP
  selector:
    app: sampledata
  ports:
  - port: 80
    targetPort: 80
